--- a/src/assets/style/pages/home-page.scss
+++ b/src/assets/style/pages/home-page.scss
@@ -1,30 +1,30 @@
 .home-page {
-    // padding: 10px;
-    // border-radius: 5px;
-    // text-align: center;
-    // color: white;
-    // font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    font-size: 20px;
 
-    // h1 {
-    //     font-size: 35px;
-    // }
+    h1 {
+        font-size: rem(35px);
+    }
 
-    // button {
-    //     width: fit-content;
-    //     border: 1px solid white;
-    //     background-color: unset;
-    //     padding: 10px 15px;
-    //     border-radius: 20px;
-    //     color: white;
-    //     font-size: 18px;
+    button {
+        width: fit-content;
+        border: 1px solid white;
+        background-color: unset;
+        padding: 10px 15px;
+        border-radius: 20px;
+        color: white;
+        font-size: rem(18px);
 
-    //     &:hover {
-    //         transform: scale(1.1);
-    //         border: 1px solid black;
-    //         background-color: rgba(255, 255, 255, 0.596);
-    //         color: black;
-    //     }   
-    // }    
+        &:hover {
+            transform: scale(1.1);
+            border: 1px solid black;
+            background-color: rgba(255, 255, 255, 0.596);
+            color: black;
+        }
+    }
 
     @media screen and (min-width: 750px) {
         h1 {
