--- a/src/assets/style/pages/home.scss
+++ b/src/assets/style/pages/home.scss
@@ -6,7 +6,7 @@
     font-size: 20px;
 
     h1 {
-        font-size: rem(35px);
+        font-size: 35px;
     }
 
     button {
@@ -16,15 +16,15 @@
         padding: 10px 15px;
         border-radius: 20px;
         color: white;
-        font-size: rem(18px);
+        font-size: 18px;
 
         &:hover {
             transform: scale(1.1);
             border: 1px solid black;
             background-color: rgba(255, 255, 255, 0.596);
             color: black;
-        }
-    }
+        }   
+    }    
 
     @media screen and (min-width: 750px) {
         h1 {
