--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -1,4 +1,5 @@
 // SETUP
+
 @import "./setup/funcitons";
 @import "./setup/variables";
 @import "./setup/typography";
@@ -7,13 +8,20 @@
 
 
 // Layout & Basics
+
+
 @import "./basics/base";
 @import "./basics/helpers";
 @import "./basics/layout";
 
 // PAGES
-@import "./pages/home-page";
+@import "./pages/search.scss";
+@import "./pages/home.scss";
+@import "./pages/favorite.scss";
 
 
 // CMPS
-@import "./cmps/app-haeder";
+
+@import "./cmps/header.scss";
+@import "./cmps/forecast-list.scss";
+@import "./cmps/forecast-preview.scss";
